--- a/Dict/Dict.csproj
+++ b/Dict/Dict.csproj
@@ -35,6 +35,8 @@
     <Compile Include="BGLParser\BGLEntry.cs" />
     <Compile Include="BGLParser\BGLParser.cs" />
     <Compile Include="BGLParser\BGLStream.cs" />
+    <Compile Include="Pages\MainPage.cs" />
+    <Compile Include="Properties\FileSlector.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.1.3.3.6323\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.3.3.6323\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
@@ -57,5 +59,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="BGLParser\" />
+    <Folder Include="Pages\" />
   </ItemGroup>
 </Project>
