--- a/Droid/Dict.Droid.csproj
+++ b/Droid/Dict.Droid.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BGL\BGLStreamer.cs" />
+    <Compile Include="FileSelector.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
