--- a/Droid/Dict.Droid.csproj
+++ b/Droid/Dict.Droid.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -65,6 +65,7 @@
     <ProjectReference Include="..\Dict\Dict.csproj">
       <Project>{39A4F615-5B18-40B2-8029-95F3A0038986}</Project>
       <Name>Dict</Name>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
     </ProjectReference>
     <ProjectReference Include="..\Compass.FilePicker\Compass.FilePicker.csproj">
       <Project>{605F69AA-93A8-4AEA-9BBD-BF3AE649506A}</Project>
@@ -87,7 +88,6 @@
   <ItemGroup>
     <Folder Include="Resources\layout\" />
     <Folder Include="Resources\values\" />
-    <Folder Include="BGL\" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\icon.png" />
