--- a/Dict/Dict.csproj
+++ b/Dict/Dict.csproj
@@ -33,6 +33,7 @@
     <Compile Include="Dict.cs" />
     <Compile Include="DictonaryManager.cs" />
     <Compile Include="Modle\Dictonary.cs" />
+    <Compile Include="Pages\WaitPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BGLParser\BGLEntry.cs" />
     <Compile Include="BGLParser\BGLParser.cs" />
