--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Mono.Data.Sqlite.Portable" version="1.0.3.5" targetFramework="MonoAndroid60" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="MonoAndroid60" />
   <package id="SharpZipLib.Portable" version="0.86.0.0003" targetFramework="MonoAndroid60" />
   <package id="Xamarin.Android.Support.v4" version="21.0.3.0" targetFramework="MonoAndroid60" />
